html: add class count-button

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div id="counter">
         <div>
-            <button id="plus">
+            <button id="plus" class="count-button">
                 +
             </button>
             <span id="value">
                 0
             </span>
-            <button id="minus">
+            <button id="minus" class="count-button">
                 -
             </button>
         </div>
